logs/buildlib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/buildlib'...
Listing './lib/python3.5/site-packages/buildlib/cmds'...
Listing './lib/python3.5/site-packages/buildlib/cmds/build'...
Compiling './lib/python3.5/site-packages/buildlib/cmds/build/__init__.py'...
***   File "./lib/python3.5/site-packages/buildlib/cmds/build/__init__.py", line 25
    cfg: dict = yaml.load_yaml(
       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildlib/cmds/docker'...
Compiling './lib/python3.5/site-packages/buildlib/cmds/docker/__init__.py'...
***   File "./lib/python3.5/site-packages/buildlib/cmds/docker/__init__.py", line 57
    status: str = Status.ok
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildlib/cmds/git'...
Compiling './lib/python3.5/site-packages/buildlib/cmds/git/__init__.py'...
***   File "./lib/python3.5/site-packages/buildlib/cmds/git/__init__.py", line 11
    p: CompletedProcess = run(cmd=['git', 'add', '--all'])
     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/buildlib/cmds/git/sequence.py'...
***   File "./lib/python3.5/site-packages/buildlib/cmds/git/sequence.py", line 7
    version: str
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildlib/cmds/pipenv'...
Compiling './lib/python3.5/site-packages/buildlib/cmds/pipenv/__init__.py'...
***   File "./lib/python3.5/site-packages/buildlib/cmds/pipenv/__init__.py", line 14
    p: CompletedProcess = run(['pipenv', 'install'] + dev_flag)
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildlib/cmds/semver'...
Compiling './lib/python3.5/site-packages/buildlib/cmds/semver/prompt.py'...
***   File "./lib/python3.5/site-packages/buildlib/cmds/semver/prompt.py", line 9
    version: str = prmt.string(
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildlib/utils'...
Listing './lib/python3.5/site-packages/buildlib/utils/module'...
Compiling './lib/python3.5/site-packages/buildlib/utils/module/__init__.py'...
***   File "./lib/python3.5/site-packages/buildlib/utils/module/__init__.py", line 6
    module_name: str = os.path.basename(module_path.replace('.py', ''))
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildlib/utils/semver'...
Compiling './lib/python3.5/site-packages/buildlib/utils/semver/__init__.py'...
***   File "./lib/python3.5/site-packages/buildlib/utils/semver/__init__.py", line 41
    vnum: list = re.findall(r'\d+', version)
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildlib/utils/wheel'...
Compiling './lib/python3.5/site-packages/buildlib/utils/wheel/__init__.py'...
***   File "./lib/python3.5/site-packages/buildlib/utils/wheel/__init__.py", line 10
    parted: list = name.split('-')
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildlib/utils/yaml'...
Listing './lib/python3.5/site-packages/buildlib-1.0.28.dist-info'...
Listing './lib/python3.5/site-packages/cmdinter'...
Compiling './lib/python3.5/site-packages/cmdinter/__init__.py'...
***   File "./lib/python3.5/site-packages/cmdinter/__init__.py", line 10
    ok: str = '[OK]'
      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cmdinter-1.0.7.dist-info'...
Listing './lib/python3.5/site-packages/headlines'...
Compiling './lib/python3.5/site-packages/headlines/__init__.py'...
***   File "./lib/python3.5/site-packages/headlines/__init__.py", line 29
    txt_width: int = len(txt) if len(txt) + 6 < width else width - 6
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/headlines-0.0.0a5.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prmt'...
Compiling './lib/python3.5/site-packages/prmt/__init__.py'...
***   File "./lib/python3.5/site-packages/prmt/__init__.py", line 48
    default_view: str = '[{}]: '.format(str(default)) if default else ''
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prmt-0.0.0a8.dist-info'...
Listing './lib/python3.5/site-packages/processy'...
Compiling './lib/python3.5/site-packages/processy/__init__.py'...
***   File "./lib/python3.5/site-packages/processy/__init__.py", line 9
    out: str = ''
       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/processy-1.0.5.dist-info'...
Listing './lib/python3.5/site-packages/ruamel'...
Listing './lib/python3.5/site-packages/ruamel/yaml'...
Listing './lib/python3.5/site-packages/ruamel.yaml-0.15.35.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
